naboo/gateway/gateway/external-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.201.4
  listeners:
    - protocol: HTTP
      port: 80
      name: http
      allowedRoutes:
        namespaces:
          from: Same
    # - protocol: HTTPS
    #   port: 443
    #   name: https
    # tls:
    #   certificateRefs:
    #     - kind: Secret
    #       name: batlab
    #       namespace: certificate
    # allowedRoutes:
    #   namespaces:
    #     from: All
